--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
+    "compression": "^1.8.1",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "msgpack-lite": "^0.1.26"
