--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "compression": "^1.8.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "msgpack-lite": "^0.1.26"
