added: getGuild route

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ data/GuildData.json
 data/Localization.json
 data/DataData.json
 data/TestData.json
+data/latestGuild.json
+data/SkillData.json
 .env
