--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       - '3000:3000'
     volumes:
       - /home/linux/ssl/ginwalkers:/etc/ssl/ginwalkers:ro
+      - ./data:/usr/src/app/data
     networks:
       - swgoh-comlink
 
