--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ data/TestData.json
 data/latestGuild.json
 data/SkillData.json
 .env
-data/guildstrategy.db
-data/guildstrategy.db-shm
-data/guildstrategy.db-wal
+data/strategy.sqlite
+data/strategy.sqlite-shm
+data/strategy.sqlite-wal
